# ChangeLog for media-sound/muine
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/muine/ChangeLog,v 1.76 2014/12/06 19:09:26 pacho Exp $

  06 Dec 2014; Pacho Ramos <pacho@gentoo.org> -muine-0.8.11-r2.ebuild:
  Drop old

  05 Dec 2014; Agostino Sarubbo <ago@gentoo.org> muine-0.8.11-r3.ebuild:
  Stable for x86, wrt bug #530042

  03 Dec 2014; Agostino Sarubbo <ago@gentoo.org> muine-0.8.11-r3.ebuild:
  Stable for ppc, wrt bug #530042

  26 Nov 2014; Agostino Sarubbo <ago@gentoo.org> muine-0.8.11-r3.ebuild:
  Stable for amd64, wrt bug #530042

*muine-0.8.11-r3 (21 Nov 2014)

  21 Nov 2014; Pacho Ramos <pacho@gentoo.org> +muine-0.8.11-r3.ebuild:
  Stop using base.eclass and deprecated mono.eclass, bump eapi, stop installing
  static files.

  12 Oct 2013; Pacho Ramos <pacho@gentoo.org> muine-0.8.11-r2.ebuild:
  Drop unneeded dep

  05 May 2012; Michał Górny <mgorny@gentoo.org> muine-0.8.11-r2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  27 Mar 2011; Pacho Ramos <pacho@gentoo.org> -muine-0.8.11-r1.ebuild,
  muine-0.8.11-r2.ebuild:
  Remove old and pin deps to proper slots.

  21 Mar 2011; Brent Baude <ranger@gentoo.org> muine-0.8.11-r2.ebuild:
  Marking muine-0.8.11-r2 ppc stable for bug 359651

  12 Mar 2011; <angelos@gentoo.org> muine-0.8.11-r1.ebuild,
  muine-0.8.11-r2.ebuild:
  Updated ndesk-dbus dependencies (bug 356391)

  29 Jan 2011; Markos Chandras <hwoarang@gentoo.org> muine-0.8.11-r2.ebuild:
  Stable on amd64 wrt bug #352808

  29 Jan 2011; Christian Faulhammer <fauli@gentoo.org>
  muine-0.8.11-r2.ebuild:
  stable x86, bug 352808

  26 Jan 2011; Pacho Ramos <pacho@gentoo.org> muine-0.8.11-r2.ebuild:
  stock_music-library icon is no longer provided, update it then.

*muine-0.8.11-r2 (19 Dec 2010)

  19 Dec 2010; Pacho Ramos <pacho@gentoo.org> +muine-0.8.11-r2.ebuild:
  Revision bump for dropping -DG.*DISABLE_DEPRECATED that was causing breakage