@@ -4,13 +4,17 @@ Hash: SHA256
 AUX muine-0.8.11-drop-deprecated.patch 1100 SHA256 3e750aa396460323d7c1a741f2b601c943246cebf4ef3ee77ec93accd75b8db8 SHA512 eee7337e2f6045284bc6fd5460328a38e58ad4259e1079af9d0d2cb4f15fa004c396cadf5d2c27947c55b92a4fda58fa9ad613df1f5c731bf5505988fc963844 WHIRLPOOL bb5a40a6bc881850606b150e326e8b1bf7da47001b1e5c25ba2649ccc5af37fe901d526207e01888d4f5bb0847de36e3e35b5200710dae8df3358e001aa64db7
 AUX muine-0.8.11-multimedia-keys.patch 1006 SHA256 1da103b7eab6a9676e510657a5f5397c4eccc2e8979d4f25f8488d91f6f47005 SHA512 cbc4a5e5ac13e7c7fc893898bc830b71858799b1a3c5db1e198a8d4dfe4e346aa1ce6853d7ae1fc7ca09c9a3b22a17fa8f23987c04060e0a684b33414dc48c45 WHIRLPOOL 24862f8b118b0d052d0582a9db8400921f53a35a12325c638fe6ce0210476abaaeeb67ff59300d47c47f991eae37d6f745ad9585715b6f7a30e3f54c424dbcfc
 DIST muine-0.8.11.tar.bz2 647177 SHA256 fac70bd9ab8a3c7c48c1f48d10f06080f6b5a42ce32cce21a6ab472cb178ecd4 SHA512 13063c1057cc4a5fb9c2cfca6249e3014415cbfa735a89f1ae411705412e379f1252789787aaca5e11f844fcd8c31a319c408c73539ffe173bc03985b3606d79 WHIRLPOOL c1bbe48293d23f922bd34a3b613942d96ae33d419ee7220b9c2dfe33bf769b59f5fe8984ac6549e9c9a5a16c53460c06db3366fabbd2df9e3e4a7996cb161da0
-EBUILD muine-0.8.11-r3.ebuild 2196 SHA256 39a0e6dcb1d8e314cdbc59b9e2e395643db7c8b0cdbc5d3efba76429892eb951 SHA512 41e0a54e5bd277cca94ae820012a3c8a26de51bb64d02daf9ebb4c39a570adf29696b1689bc1fb9b105de369af3b66e9d7341b213ee49a0be29d05db1e36115b WHIRLPOOL c3f0f780036744e17d0e5df507b059bbdeb20383e365fbd094064ddaae3e9687cbdc66925555f907143856f07fe262080d52e9eb21a0e06621058a27a915b70d
-MISC ChangeLog 11553 SHA256 22a9a27d548b37bb4482fafda60a084ad1b334f8b1d5448006db1e33a0a4d99e SHA512 afcee640a3ff887be2f92f17c9c0a5a0e14f8c09f1148be0e634c4fbf0f15df41033415e2dbb05ed066b514c17b3d8acd3707998151edfa1d1cdfcf255e1a57d WHIRLPOOL 26c7bf2dab2985287350dfa1958f1007022420454933dd69db5a3e61ae44b6b74d7ddedde99b567b2a081c197ea63c78fe13873e500a43e21dc2abefbfa1fafc
+EBUILD muine-0.8.11-r3.ebuild 2188 SHA256 add5d8b86c5673dd1940cb453a9b926dd4aab8c037c62a66b506d3b37648c0c6 SHA512 5dd728bd59a4fe04a2705363f865918837fb2bad070c37d9c24613e1f9525214d50d10605ec0fb1e08788ac5efbdab30cb1d2c2f4bb8fe0499a6969ba3b7d132 WHIRLPOOL 443726d59d9bd91bdca8887f0c227a4fb3568305d4e312eefe61bd2ae76df250ccd8d044f86997435d9f84ce35d6afa4b3d4a50fd5283023d05229b9884fbedd
+MISC ChangeLog 11665 SHA256 c5078445f7123a250c24bc6f55accbd8f6d5da20c164238f1a2261adbfc41241 SHA512 a1e50a9769acb1cdc1233c0473764f1df8ebd97e0adb35b28ba07a864778aa4a91258375623e05f954d85339ddf4f8d6416029b26ee45fc810c06d2e45f9e914 WHIRLPOOL 5ceba4eaff21a96eddb8d233cddf2b88f5683dd8877be4f12234755046f7a9a0a9bf78f4bf20c42a7e5ad2cf6d4e4bc1f82d35fddcae9fe3440aa66e65f40e20
 MISC metadata.xml 184 SHA256 cc9f71b3a498c3d1d147de62c6557f1523b1fe59a6b489ca716a13dd71305291 SHA512 3c4829f061d71f48558e0632c3318f48ea0f779b44a025a7d7b1bdb0e426c50a6ab5e0a4f5aa3a77a774c4a65bb9a1b2f33208fd1d8b2b0f5635780268e20d6e WHIRLPOOL 343ba330886282e05e2c4e75069be6d590a673ed6367a560e8aa7cf0acb170fde49a209a497763983959cee4b93063e26cf57dc601f80fdef3178d1b8b433b89
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSDVGkACgkQCaWpQKGI+9R4CgCgggmEK1ojgn9Ceb6kblpuHCKJ
-uGoAnjYyfUzFjhJAdlhBtawf/4ZMHoxU
-=YCpY
+iQEcBAEBCAAGBQJU1laqAAoJEOeBhlrCAAWGbDYH/2DQWWYDPcqc2UXdUY8FftrY
++Gu+8O53+7UOASk3VQgefGTiYXkQjfCzLlNxI1vPsQDCbHne8kspiJq7FXk+DnVu
++pYxl6yBsL2BuV6NYrikWoburlLamLh6da6KN1JptTYr4bncI3MazSSP07o1qFAv
+jH1Xy84h2qqP4Gqu6zmPWmYpeZ6Ir0lMOWSUa+CQMr6jCRYAMvkfe4SmtL18YyqQ
+j2A6dBO5VT5SdLyqzZCAdPt4YD5blBDZfjhpMuccnMNKyXkpy+4KbcSkvk8JTumc
+qbxp81w6UwfAvjsLzWEJfzS9QLrhMx2QqkCcpv+ndzF6uGwT43eLAtrhOOu8i0U=
+=bd9E
 -----END PGP SIGNATURE-----
