@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/muine/muine-0.8.11-r3.ebuild,v 1.4 2014/12/05 10:18:10 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/muine/muine-0.8.11-r3.ebuild,v 1.5 2015/02/07 18:17:08 ottxor Exp $
 
 EAPI=5
 GCONF_DEBUG="yes"
@@ -9,7 +9,7 @@ inherit gnome2 mono-env eutils multilib
 
 DESCRIPTION="A music player for GNOME"
 HOMEPAGE="http://muine.gooeylinux.org/"
-SRC_URI="http://download.gnome.org/sources/muine/0.8/${P}.tar.bz2"
+SRC_URI="mirror://gnome/sources/muine/0.8/${P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
