@@ -8,6 +8,6 @@ KEYWORDS=amd64 ppc x86
 LICENSE=GPL-2
 RDEPEND=x11-themes/gnome-icon-theme >=dev-lang/mono-2 >=x11-libs/gtk+-2.6:2 >=dev-dotnet/gtk-sharp-2.12.9:2 >=dev-dotnet/glade-sharp-2.12.6:2 >=dev-dotnet/gnome-sharp-2.6:2 >=dev-dotnet/gconf-sharp-2.6:2 >=dev-dotnet/gnomevfs-sharp-2.6:2 >=dev-dotnet/ndesk-dbus-0.4 >=dev-dotnet/ndesk-dbus-glib-0.3 >=dev-dotnet/taglib-sharp-2.0.3 sys-libs/gdbm media-libs/gstreamer:0.10 media-libs/gst-plugins-base:0.10 media-libs/gst-plugins-good:0.10 media-plugins/gst-plugins-gconf:0.10 media-plugins/gst-plugins-gnomevfs:0.10 flac? ( media-plugins/gst-plugins-flac:0.10 ) mad? ( media-plugins/gst-plugins-mad:0.10 ) vorbis? ( media-plugins/gst-plugins-ogg:0.10 media-plugins/gst-plugins-vorbis:0.10 )
 SLOT=0
-SRC_URI=http://download.gnome.org/sources/muine/0.8/muine-0.8.11.tar.bz2
+SRC_URI=mirror://gnome/sources/muine/0.8/muine-0.8.11.tar.bz2
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	2305806a1b5bd8f8b1016c6256bb2c80	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	mono-env	59ca1177366cc9e14521d3501e9bb281	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=2ab49472ff1a057e780dd664f7cac370
+_md5_=d065dd05641e255f09887735541e8a9a
