@@ -5,26 +5,18 @@ AUX 2.1-brokentest.patch 1029 SHA256 6aa51463c7f0f966c8a7668877fc1199b6ed85187be
 AUX 2.1-prll-install.patch 421 SHA256 9f2aa837ee4cae17e703e4367179e64e69c0759f601ad3acd74431222e420b0d SHA512 ff30ed5edb3a9a2bfde6b480b2bbf2d8487cfe6583f73bbefb35e434b37e727037005e6e11e91aa115fcc75ed558883e36aa64d46f34d9ab40a94792eb201e10 WHIRLPOOL bb12b45f907f87c6d030a5562053d116191c9f8a50b37b85fb8b83d85a84a27891b9fc2db28de27c4ac296639051e8ea9b8cb5dd9f235d3c998cd1b983fd546b
 AUX guile-gtk-2.0-g-object-ref.diff 1239 SHA256 fb68d90e21c8d7fb2b73c55a068b5528ae56c82336b200012f97b8abe56242fc SHA512 ad72eff398d573450127dab756207974b56b48161d79a13b907ed58dc17ba63b1256478ab8d2d6c22ec03fd106d9814e6a4d9ca030ee203c1af474a28faea513 WHIRLPOOL c44bca7a1f82d0c0331611f8aa6711d1e12efa84279e36ae4512e9829b7ce09f8efce9b49e8411fda148969ab0de3e622cfdcd107b21f39e3c6eb60700dc168c
 DIST guile-gtk-2.1.tar.gz 781985 SHA256 9ad30cdfcae688837785774b2149f0ec82f464412017aeeb045b4336ef2416cc SHA512 ab9bc66c97099d6958c401e16db57ceedaf23f1944cb7cf1e6899547c77cafff67455f228edd156a5a7ee0b62264e6af0ff82fa3ec31bcb499710bc5cb2070a7 WHIRLPOOL 6e14158951fa307fedc20f8956ecb1eefc7e1b2c3f5d0b3505060ceb709efd51a40e5931c4e05877b7ce35498ebe1fa06526859efc00b09e9c46bb7b8661a4c5
-EBUILD guile-gtk-2.1-r1.ebuild 986 SHA256 a8c6ccda0d01d24e4f8b0cf54ac38733ea34bbf1aa437b42b40116061de5dead SHA512 72867306815dca709dae3312cedbe53af56d5d558b06f166e120c6434d2b3ac1ab79f91cd61ad86f796eefeb5ebdcebc3073ede00be968a5ff52462bd714ac3b WHIRLPOOL 10cc163ea7c8558a1ddd9b5bfed79355940a454cb1f112d7edc9d61be361d918419b446b8273f78a81996bd14194244b5a03748f627ce4344315d506cf82ea50
-EBUILD guile-gtk-2.1-r2.ebuild 1061 SHA256 9552ff63ba22c02390e7aadc21978b54dd6242569f4e556c146eaf1f00597ed1 SHA512 aafd2ff5fe7884b3d6f403a4f65d1a177f3ec27f619494d9b69fd04c4e5ea3502b99ec7aad4f2a71d31740cb5b3c923f1ae54bee3705bc5948812656eb90115f WHIRLPOOL fbf1f32248b955cff4c0f6d57f08200249e0a4f02a73ad02a9c3110191e2cfae157af0d929e7c79ba31713af4bf9a481b9c61927b66b0e2c19a4d71f743b8cf0
-MISC ChangeLog 6059 SHA256 e30ffab7c9a0c9b9d3582d58c1ff1e6fc0666ee622050c61e8bcfbdc1566af24 SHA512 486cd6388fd2f5d1c01b46c3e694038de650737426df124d5d6af04f3684b93d16d9fc1d567e525fbb50e302e34057c7124d52aea23f9a35191d56ce799eefbd WHIRLPOOL 3c684a8fcb1d36685e757540df39ca6923c8ee48d421435dc9d2396a743d981fcb4cd8b06c3ce7d5e8f6980c4e045ab4cd97ac4d6a9f315ee68f0f52b8ecfa59
+EBUILD guile-gtk-2.1-r1.ebuild 980 SHA256 b17da61fca0f000b643de25e50747e840337173a48e4fb2d548bb6099d0e4be9 SHA512 8632bb1d50eba1cd87eafdb328ecab747bb51ac3398923f69f083e06019d31f0f33554f0a0698ae83faf67128441c76ba85e35adac394cd74b4211ed468264f2 WHIRLPOOL d45c51aa545c628e8fc331ca61caf0923f1bacdfb3821a32a3e2a6f532fed3bb53d0a9414c59cba963a76ddefca71a87db71dde5cbcd7741248d0304990057c7
+EBUILD guile-gtk-2.1-r2.ebuild 1054 SHA256 45420cc374b3823b72f0f0a880ef75e802e5d9d6f8fc80079a39d4c3f43d7e6c SHA512 c4a3cf9463d35a4f75ad489a909f850da67db70bbf3bd889ef05877aa601bc8259d654bb574e9227d4457dc653b84429d8478b04ccae2a277231f101adada1a3 WHIRLPOOL ab51698a05d08c4147b88464a190048b19d822bd6e9433e0f5785967e1a5686e114128e8f59697f1703cfc2061471d8c8a7c9a87633633cfd55c09a37a025d4d
+MISC ChangeLog 6194 SHA256 bf4d111ba6115fed024af1c89e44ae70604dc8668b3b760a0080169e3a84be68 SHA512 72e70e221342910ac3c857e7c8c3235d9ef9a7dd0247aa20d5e255769e9466f3438911988bd0e109aed6553c38404973ca1f0c70dbff649c427b24fc1e323a7d WHIRLPOOL 06df81750001ed0aa414bea92ff009e95bf1335a23e03b8edf68ff45076a689ddd27923f7fb4b317ef44513d04aa32b30bc00c3a7901ce56c35d6a5386b66283
 MISC metadata.xml 383 SHA256 703a18a1572fa929ca3f575b294703022e2f771d3fff0b22e895cd452076feaa SHA512 d6ffac6b5e70b633e56ca9bf9d4162c065093991e26747790bfea6c4d3b9bc472eb2ac283fd8a16d4cea131f15561e37e2ef0340f15aa38e05d6ae6350a17350 WHIRLPOOL 2ca6a2d91eac12815bf8255fda73d20c2dd5ff522be915b5a281ea4bb0f225950898bf4303c47c3580d72b3d009e700a7156291c7648eca21baa849689ab84be
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2
 
-iQJ8BAEBCABmBQJT4hsgXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQxMzgwNDhGMjg4MzhERTE1NTY2NjA4MkZE
-MUJBQjZCNTI4REIwMjlDAAoJENG6trUo2wKcNxQP/iuveZfN2elTQpaPcPDBY2ze
-tzHzI8qe+ghM2baH1BR1Rt/DYuEhlHaG9KAOgqq9DSEl5fdRwIwn3j6t6B0PpSbU
-L1zvntP/xSnSi372dEAbsAzxHvdW33276CgntW1qlU4gH2qzB22s7iFxRFc/Cipq
-8/3swnN1UAyDUVzmnjgLCDRooYQwD5cE9/Gw272JmRIHLJCRdfiLoQT5zlP7/Urz
-CeKgw9wLpjWaBkUwdVgXhkisN62SkZNdsHIP/w1Exp70V8jA7z8voygftwhs3S5i
-4+0cgp4PnILWIHuOKaCG9JT+sRK520mNUo5p+qhgtiVimcZ/aleMJpGE2fRpABID
-DHJsCvUdvaHosVm7expvajYdTM6koBmUHvn1e3j9CU8zta3rvuhxy62v88wgjRh+
-roTdwNKvAEh+hJfVoAhBGHievW4KZFg622/Jo9irRiDtbTEsHBvUQ4TLVeyrMViE
-Okt9aSfKR6+IKHgEmm8hIGx29PNjgQPSnQg7Nl/CHuaHBSC08796/Vn3D+NMOlXX
-c8Nzl/bm+g8JdampYCEtGZxGWMfnc5VwUIOZyWKWx+vVyg1xjwKuKTRS/n+fsJgD
-q6pjT1OP/x2lKH+MahKagMZik6Lj+W0y1+iZcGBMgi1BRxJjpJ4nHK153dvPUTF4
-Zb/Wwl9+kTGPMpdomD0j
-=eddP
+iQEcBAEBCAAGBQJU1lfgAAoJEOeBhlrCAAWGUHYH/AvKJHxNJiJJlrOjizA0JFpn
+8qzZDMuykow9zJOYphiT+rGysAug+q36kD+wrYqKhu/Cnhoe8rRbq0D2mjuDHwUn
+BLIvjEO1rrKgOxz5TOf2G4bC8BmXU60qIhKwWNwQJwnxeoGBtfysqjujSjzmJMR+
+W3jP743Kry4sXyqgeqIRO3sZB0rGlcIzODQBGMEUMvLvgdEnE3G5cFJYvp0cuH8M
+Klfkp8PaZYijBpOGk8YuLBHtw/jlA3nBC89lw5OQpO+KoH8NOJKFcg93br/rM40i
+ScC2qei5hH/SGsjDYkFqiGHuAKxw3kqVKqY2swXPfrLmSRnIY69/VubuX2E6Gec=
+=+5Z2
 -----END PGP SIGNATURE-----
