@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/guile-gtk-2.1-r2.ebuild,v 1.1 2013/05/04 12:03:19 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/guile-gtk/guile-gtk-2.1-r2.ebuild,v 1.2 2015/02/07 18:22:22 ottxor Exp $
 
 EAPI=5
 
@@ -10,7 +10,7 @@ inherit autotools-utils virtualx
 
 DESCRIPTION="GTK+ bindings for guile"
 HOMEPAGE="http://www.gnu.org/software/guile-gtk/"
-SRC_URI="ftp://ftp.gnu.org/gnu/guile-gtk/${P}.tar.gz"
+SRC_URI="mirror://gnu/guile-gtk/${P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
