@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/muine
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/muine/ChangeLog,v 1.76 2014/12/06 19:09:26 pacho Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/muine/ChangeLog,v 1.77 2015/02/07 18:17:08 ottxor Exp $
+
+  07 Feb 2015; Christoph Junghans <ottxor@gentoo.org> muine-0.8.11-r3.ebuild:
+  use mirror://gnome in SRC_URI
 
   06 Dec 2014; Pacho Ramos <pacho@gentoo.org> -muine-0.8.11-r2.ebuild:
   Drop old
